[project]
name = "jupyterlite"
version = "0.1.0"
description = "Development Seed's Jupyterlite deployment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anywidget>=0.9.13",
    "ipyleaflet>=0.19.2",
    "ipywidgets>=8.1.5",
    "jupyterlab-geojson>=3.4.0",
    "jupyterlab-night>=0.4.6",
    "jupyterlab>=4.2.5",
    "jupyterlite-core>=0.4.1",
    "jupyterlite-pyodide-kernel>=0.4.2",
    "notebook>=7.2.2",
]
